src-tauri/tests/snapshots/dto_snapshots__person_hit_dto.snap
---
source: src-tauri/tests/dto_snapshots.rs
expression: dto
---
{
  "cluster_id": 21,
  "name": "Asha",
  "photo_count": 88,
  "face_thumbnail_path": ".photovault/faces/701.jpg"
}
