src-tauri/tests/snapshots/dto_snapshots__person_stat_dto.snap
---
source: src-tauri/tests/dto_snapshots.rs
expression: dto
---
{
  "cluster_id": 21,
  "name": "Asha",
  "photo_count": 88,
  "face_id": 701,
  "face_crop_path": ".photovault/faces/701.jpg"
}
