src-tauri/tests/snapshots/dto_snapshots__photo_dto_full.snap
---
source: src-tauri/tests/dto_snapshots.rs
assertion_line: 188
expression: dto
---
{
  "id": 7,
  "file_path": "subdir/IMG_0007.jpg",
  "file_name": "IMG_0007.jpg",
  "file_size": 1024,
  "file_hash": "deadbeef",
  "date_taken": "2024-01-01T12:00:00",
  "width": 6048,
  "height": 4024,
  "orientation": 1,
  "media_type": "photo",
  "duration_ms": null,
  "video": null,
  "gps": {
    "lat": 17.68,
    "lng": 83.2,
    "altitude": 15.0
  },
  "location": {
    "city": "Visakhapatnam",
    "country": "India"
  },
  "camera": {
    "make": "NIKON CORPORATION Nikon Z 7ii",
    "model": null,
    "lens": "NIKKOR Z 24-70mm f/2.8 S",
    "iso": 400,
    "aperture": "f/2.8",
    "shutter_speed": "1/125",
    "focal_length": "50mm",
    "flash": "Off"
  },
  "thumbnail_path": ".photovault/thumbnails/medium/v2/de/deadbeef.jpg",
  "faces_processed": true,
  "is_favorite": true,
  "is_trashed": false,
  "stack": null,
  "indexed_at": "2024-01-01T12:00:00+00:00"
}
