src-tauri/tests/snapshots/dto_snapshots__photo_dto_minimal.snap
---
source: src-tauri/tests/dto_snapshots.rs
assertion_line: 194
expression: dto
---
{
  "id": 1,
  "file_path": "IMG.jpg",
  "file_name": "IMG.jpg",
  "file_size": 0,
  "file_hash": "abc",
  "date_taken": null,
  "width": null,
  "height": null,
  "orientation": 1,
  "media_type": "photo",
  "duration_ms": null,
  "video": null,
  "gps": null,
  "location": null,
  "camera": null,
  "thumbnail_path": null,
  "faces_processed": false,
  "is_favorite": false,
  "is_trashed": false,
  "stack": null,
  "indexed_at": "2024-01-01T12:00:00+00:00"
}
