src-tauri/tests/snapshots/dto_snapshots__place_hit_dto.snap
---
source: src-tauri/tests/dto_snapshots.rs
expression: dto
---
{
  "city": "Paris",
  "country": "France",
  "photo_count": 12
}
