src-tauri/tests/snapshots/dto_snapshots__search_results_dto.snap
---
source: src-tauri/tests/dto_snapshots.rs
assertion_line: 530
expression: dto
---
{
  "interpreted": [
    {
      "kind": "place",
      "label": "Paris, France"
    }
  ],
  "people": [
    {
      "cluster_id": 21,
      "name": "Asha",
      "photo_count": 88,
      "face_thumbnail_path": ".photovault/faces/701.jpg"
    }
  ],
  "albums": [
    {
      "album_id": 4,
      "name": "Goa 2024",
      "photo_count": 32,
      "cover_photo_id": 7,
      "cover_thumbnail_path": ".photovault/thumbnails/cover.jpg"
    }
  ],
  "places": [
    {
      "city": "Paris",
      "country": "France",
      "photo_count": 12
    }
  ],
  "photo_ids": [
    7
  ],
  "photos": [
    {
      "photo_id": 7,
      "date_taken": "2024-01-01T12:00:00",
      "location_city": "Paris",
      "location_country": "France",
      "thumbnail_path": ".photovault/thumbnails/search.jpg"
    }
  ],
  "has_more": false
}
